# otslib

./: README.md  requirements.txt  setup.cfg
src/onthespot/common/: utils.py
src/otslib/common/: formating.py  url.py
src/otslib/core/: __base__.py  mediaitem.py  user.py
src/otslib/exceptions/: __init__.py
