[metadata]
name = otslib
version = 0.1
description = A Python library for building over and working with spotify. Support for web API endpoints, Music playback and more
long_description = file: README.md
long_description_content_type = text/markdown
author = Casual Snek
author_email = contact@casualsnek.eu.org
url = https://github.com/casualsnek/otslib
keywords = spotify api, python spotify, multimedia
license = GPL-3.0 License

[options]
package_dir=
    =src
python_requires = >= 3.10
packages = find:
include_package_data = True

[options.packages.find]
where=src